change rerouting link on form submission

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 										<ul class="actions">
 											<li><button type="submit" class="button submit">Send Message</button></li>
 										</ul>
-										<input type="hidden" name="_next" value="http://localhost:5500">
+										<input type="hidden" name="_next" value="https://michael-shu.github.io/portfolio/">
 										<input type="hidden" name="_captcha" value="false">
 									</form>
 								</section>
