remove unnecessary html

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 								Whether you have a question, a project idea, or just want to say hi, I'm here to help!</p>
 							<div class="split style1">
 								<section>
-									<form id = "contactForm" method="post" action = "https://formsubmit.co/michaelshu34@gmail.com">
+									<form id = "contactForm">
 										<div class="fields">
 											<div class="field half">
 												<label for="name">Name</label>
@@ -152,8 +152,6 @@
 										<ul class="actions">
 											<li><button type="submit" class="button submit">Send Message</button></li>
 										</ul>
-										<input type="hidden" name="_next" value="https://michael-shu.github.io/portfolio/">
-										<input type="hidden" name="_captcha" value="false">
 									</form>
 								</section>
 								<section>
