add more details for heardle

--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Heardle</h2>
-									<p>Heardle is an interactive music guessing game where players challenge their song recognition skills by identifying tracks with just a few seconds of audio. Currently under development</p>
+									<p>Heardle is an interactive music guessing game where players challenge their song recognition skills by identifying tracks with just a few seconds of audio. Currently awaiting spotify extension approval.
+										If you'd like to see some of the routes, navigate to /home, /play, and /about
+									</p>
 									<ul class="actions">
 										<li><a href="https://heardle-client.vercel.app/" class="button">Learn more</a></li>
 									</ul>
