--- a/index.html
+++ b/index.html
@@ -1,217 +1,260 @@
 <!DOCTYPE HTML>
 
 <html>
-	<head>
-		<title>Michael Shu - Software Engineer</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-	</head>
-	<body class="is-preload">
 
-		<!-- Sidebar -->
-			<section id="sidebar">
-				<div class="inner">
-					<nav>
-						<ul>
-							<li><a href="#intro">Welcome</a></li>
-							<li><a href="#one">My Projects</a></li>
-							<li><a href="#two">About Me</a></li>
-							<li><a href="#three">Get in touch</a></li>
+<head>
+	<title>Michael Shu - Software Engineer</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<link rel="stylesheet" href="assets/css/main.css" />
+	<noscript>
+		<link rel="stylesheet" href="assets/css/noscript.css" />
+	</noscript>
+</head>
+
+<body class="is-preload">
+
+	<!-- Sidebar -->
+	<section id="sidebar">
+		<div class="inner">
+			<nav>
+				<ul>
+					<li><a href="#intro">Welcome</a></li>
+					<li><a href="#one">My Projects</a></li>
+					<li><a href="#two">About Me</a></li>
+					<li><a href="#three">Get in touch</a></li>
+				</ul>
+			</nav>
+		</div>
+	</section>
+
+	<!-- Wrapper -->
+	<div id="wrapper">
+
+		<!-- Intro -->
+		<section id="intro" class="wrapper style1 fullscreen fade-up">
+			<div class="inner">
+				<h1>Welcome to my portfolio</h1>
+				<p>Hi, I’m Michael Shu – a passionate Software Engineer with expertise in frontend development, backend
+					systems,
+					and full-stack applications. With a strong foundation in JavaScript, Python, and Java, I love
+					building efficient,
+					user-friendly solutions that make a difference. Explore my projects and experiences to see how I
+					turn ideas
+					into reality. Let's create something amazing together!</p>
+				<ul class="actions">
+					<li><a href="#one" class="button scrolly">Learn more</a></li>
+				</ul>
+			</div>
+		</section>
+
+		<!-- One -->
+		<section id="one" class="wrapper style2 spotlights">
+			<section>
+				<a href="https://champion-mastery-op-gg.herokuapp.com/" class="image"><img
+						src="images/champion-mastery.png" alt="" data-position="center center" /></a>
+				<div class="content">
+					<div class="inner">
+						<h2>Champion Mastery</h2>
+						<p>ChampionMastery is a dynamic platform designed to help League of Legends players track and
+							optimize their in-game performance across their favorite champions.</p>
+						<ul class="actions">
+							<li><a href="https://champion-mastery-op-gg.herokuapp.com/" class="button">Learn more</a>
+							</li>
 						</ul>
-					</nav>
+					</div>
 				</div>
 			</section>
+			<section>
+				<a href="https://heardle-client.vercel.app/" class="image"><img src="images/heardle.png" alt=""
+						data-position="top center" /></a>
+				<div class="content">
+					<div class="inner">
+						<h2>Heardle</h2>
+						<p>Heardle is an interactive music guessing game where players challenge their song recognition
+							skills by identifying tracks with just a few seconds of audio. Currently awaiting spotify
+							extension approval.
+							If you'd like to see some of the routes, navigate to /home, /play, and /about
+						</p>
+						<ul class="actions">
+							<li><a href="https://heardle-client.vercel.app/" class="button">Learn more</a></li>
+						</ul>
+					</div>
+				</div>
+			</section>
+			<section>
+				<a href="https://michael-shu.github.io/copyWebsiteAssistanceForward/" class="image"><img
+						src="images/assistance-forward.png" alt="" data-position="25% 25%" /></a>
+				<div class="content">
+					<div class="inner">
+						<h2>Landing Pages</h2>
+						<p>I create custom landing pages that are visually appealing, user-friendly, and optimized to
+							drive conversions, tailored to meet specific business goals.</p>
+						<ul class="actions">
+							<li><a href="https://michael-shu.github.io/copyWebsiteAssistanceForward/"
+									class="button">Learn more</a></li>
+						</ul>
+					</div>
+				</div>
+			</section>
+			<section>
+				<a href="https://abetterinfluence.com/" class="image"><img src="images/assistance-forward.png" alt=""
+						data-position="25% 25%" /></a>
+				<div class="content">
+					<div class="inner">
+						<h2>Current Work</h2>
+						<p>As a Software Developer at abetterinfluence, I contributed to building a responsive,
+							high-traffic frontend website using React, paired with a robust express backend. This setup
+							leverages Supabase for efficient database management and storage, all deployed
+							within Docker to ensure scalability and performance. Currently under development</p>
+						<ul class="actions">
+							<li><a href="https://michael-shu.github.io/copyWebsiteAssistanceForward/"
+									class="button">Learn more</a></li>
+						</ul>
+					</div>
+				</div>
+			</section>
+		</section>
 
-		<!-- Wrapper -->
-			<div id="wrapper">
-
-				<!-- Intro -->
-					<section id="intro" class="wrapper style1 fullscreen fade-up">
-						<div class="inner">
-							<h1>Welcome to my portfolio</h1>
-							<p>Hi, I’m Michael Shu – a passionate Software Engineer with expertise in frontend development, backend systems, 
-								and full-stack applications. With a strong foundation in JavaScript, Python, and Java, I love building efficient, 
-								user-friendly solutions that make a difference. Explore my projects and experiences to see how I turn ideas 
-								into reality. Let's create something amazing together!</p>
-							<ul class="actions">
-								<li><a href="#one" class="button scrolly">Learn more</a></li>
-							</ul>
-						</div>
+		<!-- Two -->
+		<section id="two" class="wrapper style3 fade-up">
+			<div class="inner">
+				<h2>About Me</h2>
+				<p></p>
+				<div class="features">
+					<section>
+						<span class="icon solid major fa-code"></span>
+						<h3>Recent NYU Graduate</h3>
+						<p>Graduating from New York University with a B.S. in Computer Science provided me with a solid
+							foundation in various programming languages and technical skills.</p>
 					</section>
-
-				<!-- One -->
-					<section id="one" class="wrapper style2 spotlights">
-						<section>
-							<a href="https://champion-mastery-op-gg.herokuapp.com/" class="image"><img src="images/champion-mastery.png" alt="" data-position="center center" /></a>
-							<div class="content">
-								<div class="inner">
-									<h2>Champion Mastery</h2>
-									<p>ChampionMastery is a dynamic platform designed to help League of Legends players track and optimize their in-game performance across their favorite champions.</p>
-									<ul class="actions">
-										<li><a href="https://champion-mastery-op-gg.herokuapp.com/" class="button">Learn more</a></li>
-									</ul>
-								</div>
-							</div>
-						</section>
-						<section>
-							<a href="https://heardle-client.vercel.app/" class="image"><img src="images/heardle.png" alt="" data-position="top center" /></a>
-							<div class="content">
-								<div class="inner">
-									<h2>Heardle</h2>
-									<p>Heardle is an interactive music guessing game where players challenge their song recognition skills by identifying tracks with just a few seconds of audio. Currently awaiting spotify extension approval.
-										If you'd like to see some of the routes, navigate to /home, /play, and /about
-									</p>
-									<ul class="actions">
-										<li><a href="https://heardle-client.vercel.app/" class="button">Learn more</a></li>
-									</ul>
-								</div>
-							</div>
-						</section>
-						<section>
-							<a href="https://michael-shu.github.io/copyWebsiteAssistanceForward/" class="image"><img src="images/assistance-forward.png" alt="" data-position="25% 25%" /></a>
-							<div class="content">
-								<div class="inner">
-									<h2>Landing Pages</h2>
-									<p>I create custom landing pages that are visually appealing, user-friendly, and optimized to drive conversions, tailored to meet specific business goals.</p>
-									<ul class="actions">
-										<li><a href="https://michael-shu.github.io/copyWebsiteAssistanceForward/" class="button">Learn more</a></li>
-									</ul>
-								</div>
-							</div>
-						</section>
+					<section>
+						<span class="icon solid major fa-lock"></span>
+						<h3>Skilled Communicator</h3>
+						<p>I excel in clear and concise communication, making me a valuable team member who can
+							articulate complex technical concepts to both technical and non-technical stakeholders.</p>
 					</section>
-
-				<!-- Two -->
-					<section id="two" class="wrapper style3 fade-up">
-						<div class="inner">
-							<h2>About Me</h2>
-							<p></p>
-							<div class="features">
-								<section>
-									<span class="icon solid major fa-code"></span>
-									<h3>Recent NYU Graduate</h3>
-									<p>Graduating from New York University with a B.S. in Computer Science  provided me with a solid foundation in 
-										various programming languages and technical skills.</p>
-								</section>
-								<section>
-									<span class="icon solid major fa-lock"></span>
-									<h3>Skilled Communicator</h3>
-									<p>I excel in clear and concise communication, making me a valuable team member who can articulate complex technical concepts to both technical and non-technical stakeholders.</p>
-								</section>
-								<section>
-									<span class="icon solid major fa-cog"></span>
-									<h3>Continuous Learner</h3>
-									<p>I am always eager to expand my knowledge and stay up-to-date with the latest technologies, ensuring that I remain at the forefront of the industry.</p>
-								</section>
-								<section>
-									<span class="icon solid major fa-desktop"></span>
-									<h3>Versatile Expertise</h3>
-									<p>I am proficient in a wide array of programming languages and frameworks, including JavaScript, Python, C++, and NextJS, bringing versatility to every project I work on.</p>
-								</section>
-								<section>
-									<span class="icon solid major fa-link"></span>
-									<h3>Collaborative Team Player</h3>
-									<p>I believe that the best results come from working together, and I’m always ready to contribute my skills and knowledge to help my team succeed.</p>
-								</section>
-								<section>
-									<span class="icon major fa-gem"></span>
-									<h3>Hardworking Professional</h3>
-									<p>I am a dedicated software engineer, always committed to delivering high-quality code and meeting project deadlines.</p>
-								</section>
-							</div>
-							<!--
+					<section>
+						<span class="icon solid major fa-cog"></span>
+						<h3>Continuous Learner</h3>
+						<p>I am always eager to expand my knowledge and stay up-to-date with the latest technologies,
+							ensuring that I remain at the forefront of the industry.</p>
+					</section>
+					<section>
+						<span class="icon solid major fa-desktop"></span>
+						<h3>Versatile Expertise</h3>
+						<p>I am proficient in a wide array of programming languages and frameworks, including
+							JavaScript, Python, C++, and NextJS, bringing versatility to every project I work on.</p>
+					</section>
+					<section>
+						<span class="icon solid major fa-link"></span>
+						<h3>Collaborative Team Player</h3>
+						<p>I believe that the best results come from working together, and I’m always ready to
+							contribute my skills and knowledge to help my team succeed.</p>
+					</section>
+					<section>
+						<span class="icon major fa-gem"></span>
+						<h3>Hardworking Professional</h3>
+						<p>I am a dedicated league of legends player, hitting diamond in both tft and the summoner's rift.
+							I also squat 255, 3x6 and speak 3 languages. If these sound like qualities you'd want on your team, let’s connect!
+						</p>
+					</section>
+				</div>
+				<!--
 							<ul class="actions">
 								<li><a href="generic.html" class="button">Learn more</a></li>
 							</ul>-->
-						</div>
-					</section>
+			</div>
+		</section>
 
-				<!-- Three -->
-					<section id="three" class="wrapper style1 fade-up">
-						<div class="inner">
-							<h2>Get in touch</h2>
-							<p>Want to get in touch? Just fill out the form below, and I'll get back to you as soon as possible. 
-								Whether you have a question, a project idea, or just want to say hi, I'm here to help!</p>
-							<div class="split style1">
-								<section>
-									<form id = "contactForm">
-										<div class="fields">
-											<div class="field half">
-												<label for="name">Name</label>
-												<input type="text" name="name" id="name" />
-											</div>
-											<div class="field half">
-												<label for="email">Email</label>
-												<input type="text" name="email" id="email" />
-											</div>
-											<div class="field">
-												<label for="message">Message</label>
-												<textarea name="message" id="message" rows="5"></textarea>
-											</div>
-										</div>
-										<ul class="actions">
-											<li><button type="submit" class="button submit">Send Message</button></li>
-										</ul>
-									</form>
-								</section>
-								<section>
-									<ul class="contact">
-										<li>
-											<h3>Address</h3>
-											New York, NY<br />
-											USA</span>
-										</li>
-										<li>
-											<h3>Email</h3>
-											<a href="">michaelshu34@gmail.com</a>
-										</li>
-										<li>
-											<h3>Social</h3>
-											<ul class="icons">
-												<!--<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+		<!-- Three -->
+		<section id="three" class="wrapper style1 fade-up">
+			<div class="inner">
+				<h2>Get in touch</h2>
+				<p>Want to get in touch? Just fill out the form below, and I'll get back to you as soon as possible.
+					Whether you have a question, a project idea, or just want to say hi, I'm here to help!</p>
+				<div class="split style1">
+					<section>
+						<form id="contactForm">
+							<div class="fields">
+								<div class="field half">
+									<label for="name">Name</label>
+									<input type="text" name="name" id="name" />
+								</div>
+								<div class="field half">
+									<label for="email">Email</label>
+									<input type="text" name="email" id="email" />
+								</div>
+								<div class="field">
+									<label for="message">Message</label>
+									<textarea name="message" id="message" rows="5"></textarea>
+								</div>
+							</div>
+							<ul class="actions">
+								<li><button type="submit" class="button submit">Send Message</button></li>
+							</ul>
+						</form>
+					</section>
+					<section>
+						<ul class="contact">
+							<li>
+								<h3>Address</h3>
+								New York, NY<br />
+								USA</span>
+							</li>
+							<li>
+								<h3>Email</h3>
+								<a href="">michaelshu34@gmail.com</a>
+							</li>
+							<li>
+								<h3>Social</h3>
+								<ul class="icons">
+									<!--<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 												<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 												<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 												-->
-												<li><a href="https://github.com/michael-shu" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-												<li><a href="https://www.linkedin.com/in/michael-shu-nyc/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-											</ul>
-										</li>
-									</ul>
-								</section>
-							</div>
-						</div>
+									<li><a href="https://github.com/michael-shu" class="icon brands fa-github"><span
+												class="label">GitHub</span></a></li>
+									<li><a href="https://www.linkedin.com/in/michael-shu-nyc/"
+											class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a>
+									</li>
+								</ul>
+							</li>
+						</ul>
 					</section>
-
+				</div>
 			</div>
+		</section>
 
-		<!-- Footer -->
-			<footer id="footer" class="wrapper style1-alt">
-				<div class="inner">
-					<ul class="menu">
-						<li>&copy; Untitled. All rights reserved.</li>
-					</ul>
-				</div>
-			</footer>
+	</div>
 
-			<!-- Contact form modal -->
+	<!-- Footer -->
+	<footer id="footer" class="wrapper style1-alt">
+		<div class="inner">
+			<ul class="menu">
+				<li>&copy; Untitled. All rights reserved.</li>
+			</ul>
+		</div>
+	</footer>
 
-			<div id="successModal" class="modal" style="display:none;">
-				<div class="modal-content">
-				  <span class="close">&times;</span>
-				  <p>Your message has been sent!</p>
-				</div>
-			  </div>
+	<!-- Contact form modal -->
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+	<div id="successModal" class="modal" style="display:none;">
+		<div class="modal-content">
+			<span class="close">&times;</span>
+			<p>Your message has been sent!</p>
+		</div>
+	</div>
 
-	</body>
+	<!-- Scripts -->
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/jquery.scrollex.min.js"></script>
+	<script src="assets/js/jquery.scrolly.min.js"></script>
+	<script src="assets/js/browser.min.js"></script>
+	<script src="assets/js/breakpoints.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<script src="assets/js/main.js"></script>
+
+</body>
+
 </html>
