--- a/index.html
+++ b/index.html
@@ -99,6 +99,21 @@
 				</div>
 			</section>
 			<section>
+				<a href="https://kingdomdle.vercel.app/" class="image"><img
+						src="images/kingdomle.png" alt="" data-position="center center" /></a>
+				<div class="content">
+					<div class="inner">
+						<h2>Kingdomdle</h2>
+						<p>Kingdomdle is an application that uses gaussian blur/pyramid to successively blur manga panels, and turn them into a guessing game.
+							Images are from the world-acclaimed manga Kingdom by Yasuhisa Hara.</p>
+						<ul class="actions">
+							<li><a href="https://champion-mastery-op-gg.herokuapp.com/" class="button">Learn more</a>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</section>
+			<section>
 				<a href="https://abetterinfluence.com/" class="image"><img src="images/assistance-forward.png" alt=""
 						data-position="25% 25%" /></a>
 				<div class="content">
