--- a/index.html
+++ b/index.html
@@ -118,13 +118,28 @@
 						data-position="25% 25%" /></a>
 				<div class="content">
 					<div class="inner">
-						<h2>Current Work</h2>
+						<h2>abetterinfluence</h2>
 						<p>As a Software Developer at abetterinfluence, I contributed to building a responsive,
 							high-traffic frontend website using React, paired with a robust express backend. This setup
 							leverages Supabase for efficient database management and storage, all deployed
 							within Docker to ensure scalability and performance. Currently under development</p>
 						<ul class="actions">
-							<li><a href="https://michael-shu.github.io/copyWebsiteAssistanceForward/"
+							<li><a href="https://abetterinfluence.com/"
+									class="button">Learn more</a></li>
+						</ul>
+					</div>
+				</div>
+			</section>
+			<section>
+				<a href="https://recipeasy-zeta.vercel.app/" class="image"><img src="images/recipeasy.png" alt=""
+						data-position="25% 25%" /></a>
+				<div class="content">
+					<div class="inner">
+						<h2>Current Work</h2>
+						<p>Recipeasy is an app that uses ingredients, preferences and past data to recommend you the best recipes. 
+							Some parts currently under development, but go try it out!</p>
+						<ul class="actions">
+							<li><a href="https://recipeasy-zeta.vercel.app/"
 									class="button">Learn more</a></li>
 						</ul>
 					</div>
