--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 			<div class="inner">
 				<h2>Get in touch</h2>
 				<p>Want to get in touch? Just fill out the form below, and I'll get back to you as soon as possible.
-					Whether you have a question, a project idea, or just want to say hi, I'm here to help!</p>
+					Whether you have a suggestion for one of my apps, a project idea, or just want to say hi, feel free to contact me!</p>
 				<div class="split style1">
 					<section>
 						<form id="contactForm">
