change to essay-eye

--- a/index.html
+++ b/index.html
@@ -114,17 +114,18 @@
 				</div>
 			</section>
 			<section>
-				<a href="https://abetterinfluence.com/" class="image"><img src="images/assistance-forward.png" alt=""
+				<a href="https://www.essayeye.com/" class="image"><img src="images/essay-eye.png" alt=""
 						data-position="25% 25%" /></a>
 				<div class="content">
 					<div class="inner">
-						<h2>abetterinfluence</h2>
-						<p>As a Software Developer at abetterinfluence, I contributed to building a responsive,
-							high-traffic frontend website using React, paired with a robust express backend. This setup
-							leverages Supabase for efficient database management and storage, all deployed
-							within Docker to ensure scalability and performance. Currently under development</p>
+						<h2>Current work</h2>
+						<p>As a Software Developer at Essay Eye, I built a chrome extension built on a React frontend, 
+							with an express backend, using mongoDB for storage and nginx for proxy capabilities. My work also includes
+							researching competitors to reverse-engineer capabilities, and to provide feedback on which features 
+							to prioritize and steps moving forward
+							</p>
 						<ul class="actions">
-							<li><a href="https://abetterinfluence.com/"
+							<li><a href="https://www.essayeye.com/"
 									class="button">Learn more</a></li>
 						</ul>
 					</div>
@@ -135,7 +136,7 @@
 						data-position="25% 25%" /></a>
 				<div class="content">
 					<div class="inner">
-						<h2>Current Work</h2>
+						<h2>Current Project</h2>
 						<p>Recipeasy is an app that uses ingredients, preferences and past data to recommend you the best recipes. 
 							Some parts currently under development, but go try it out!</p>
 						<ul class="actions">
